* cygserver.conf: Describe relation between shmmaxpgs and SHMMAX.

--- a/winsup/cygserver/cygserver.conf
+++ b/winsup/cygserver/cygserver.conf
@@ -122,6 +122,8 @@
 # XSI shared memory parameters
 
 # kern.ipc.shmmaxpgs: Maximum pages available for XSI shared memory.
+# Changing shmmaxpgs immediately affects setting SHMMAX.  The relation
+# between shmmaxpgs and SHMMAX is:  SHMMAX = shmmaxpgs * getpagesize().
 # Default: 8192, Min: 1, Max: 32767
 #kern.ipc.shmmaxpgs 8192
 
