* configure.in: Convert to autoconf 2.59, rename to... 	* configure.ac: ...this. 	* Makefile.in: Update to match. 	* configure: Regenerate.

--- a/utils/spu/Makefile.in
+++ b/utils/spu/Makefile.in
@@ -92,5 +92,5 @@ Makefile: $(srcdir)/Makefile.in config.status
 config.status: $(srcdir)/configure
 	./config.status --recheck
 
-$(srcdir)/configure: $(srcdir)/configure.in
+$(srcdir)/configure: $(srcdir)/configure.ac
 	cd $(srcdir) && autoconf
