(utils) 	* Remove misc/doschk -- users should get it from upstream at 	ftp.gnu.org/pub/non-gnu/doschk/doschk-1.1.tar.gz. 	* Remove misc directory, which contains nothing else.
(utils/wince)
	* Makefile.in: Delete Makefile in 'distclean'; fixes PR gdb/920.
	Remove dead code.
	* configure.in: Update to autoconf 2.59, rename to...
	* configure.ac: ...this.
	* configure: Regenerate.

--- a/utils/wince/Makefile.in
+++ b/utils/wince/Makefile.in
@@ -17,12 +17,9 @@
 prefix = @prefix@
 exec_prefix = @exec_prefix@
 
-host_alias = @host_alias@
-target_alias = @target_alias@
 program_transform_name = @program_transform_name@
 bindir = $(exec_prefix)/bin
 libdir = $(exec_prefix)/lib
-tooldir = $(libdir)/$(target_alias)
 
 datadir = $(prefix)/share
 mandir = $(prefix)/man
@@ -107,6 +104,7 @@ clean:		mostlyclean
 
 distclean:	clean
 	rm -f config.log config.cache
+	rm -f Makefile
 
 maintainer-clean realclean:	distclean
 
