2004-09-15  Jeff Johnston  <jjohnstn@redhat.com>
        * configure.host: Reverting 2004-09-14 change as fix has occurred on
        Cygwin side.
        * configure.in: Ditto.
        * libc/configure.in: Ditto.
        * libc/sys/configure.in: Ditto.
        * configure: Ditto.
        * libc/configure: Ditto.
        * libc/sys/configure: Ditto.
        * libc/include/sys/reent.h: Ditto.
        * libc/stdlib/__atexit.c: Ditto.
        * libc/stdlib/__call_atexit.c: Ditto.
        * libc/stdlib/cxa_atexit.c: Ditto.
        * libc/stdlib/cxa_finalize.c: Ditto.
        * libc/sys/cygwin/Makefile.am: Removed again.
        * libc/sys/cygwin/Makefile.in: Ditto.
        * libc/sys/cygwin/aclocal.m4: Ditto.
        * libc/sys/cygwin/configure: Ditto.
        * libc/sys/cygwin/configure.in: Ditto.
        * libc/sys/cygwin/dummy.c: Ditto.
        * libc/sys/cygwin/sys/reent.h: Ditto.

--- a/newlib/libc/configure.in
+++ b/newlib/libc/configure.in
@@ -30,7 +30,7 @@ fi
 AC_CONFIG_SUBDIRS(machine sys)
 
 CRT0=
-if test x${sys_dir} != xcygwin && test -n "${sys_dir}"; then
+if test -n "${sys_dir}"; then
   CRT0=crt0.o
 fi
 AC_SUBST(CRT0)
